:bug: fix thin horiz scrollbars
fixes #96

--- a/src/css/features/slim_scrollbars.css
+++ b/src/css/features/slim_scrollbars.css
@@ -1,5 +1,5 @@
-.btd__slim_scrollbars .js-app-columns-container {
-  :not(.js-compose-scroller) .scroll-styled-v::-webkit-scrollbar {
+.btd__slim_scrollbars :matches(.js-app-columns-container, .js-column-scroller) {
+  .scroll-styled-v::-webkit-scrollbar {
     width: 3px;
   }
 
